# python_abac

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: concepts.md
python_abac/: __init__.py  attribute.py  attribute_store.py  authorisation_decider.py  authorisation_enforcer.py  authorisation_policy.py  authorisation_policy_store.py  authorisation_request.py  authorisation_response.py  authorisation_rule.py  category.py  decider.py  enforcer.py  policy.py  policy_store.py  request.py  response.py  rule.py  version.py
python_abac/functions/: __init__.py  authorisation_function_registry.py  base_auth_function.py
python_abac/functions/numeric/: __init__.py  base.py  equal.py  greater.py  less.py
python_abac/functions/string/: __init__.py  base.py  contains.py  ends_with.py  equal.py  starts_with.py
tests/: test_enforcer.py  test_version.py
tests/test_functions/: test_auth_function_registry.py  test_numeric.py  test_string.py
