[tool.poetry]
name = "python_abac"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Mathew Trivett <matt.trivett@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
