[tool.poetry]
name = "python_abac"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Mathew Trivett <matt.trivett@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
mkdocs = "^1.3.1"
mkdocs-material = "^8.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
pytest-asyncio = "^0.19.0"
asyncmock = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
